--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "clsx": "^2.1.1",
     "motion": "^11.11.17",
     "next": "15.0.3",
