--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next/font": "^14.2.15",
     "clsx": "^2.1.1",
     "motion": "^11.11.17",
-    "next": "15.0.3",
+    "next": "^15.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.5"
@@ -21,6 +21,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-3d": "^1.0.7"
   }
 }
